src/objects/COVA_BillingRule__c.object
<CustomObject>
    <fields>
        <fullName>COVA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>COVA_BillingRules</relationshipLabel>
        <relationshipName>COVA_BillingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COVA_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COVA_Clientrate__c</fullName>
        <label>COVA_Client rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COVA_Consultantrate__c</fullName>
        <label>COVA_Consultant rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COVA_Nonbillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COVA_Non-billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COVA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_Project</label>
        <referenceTo>COVA_Project__c</referenceTo>
        <relationshipLabel>COVA_BillingRules</relationshipLabel>
        <relationshipName>COVA_BillingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>COVA_BillingRule</label>
    <nameField>
        <label>Billing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COVA_BillingRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>